# allegro_hand_zmq

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_tests.sh  requirements.txt  run_zmq_server.sh  run_zmq_server_debug.sh  setup.py  test_json_response.py
allegro_zmq/: allegro.py
allegro_zmq/examples/: run_rock_paper_scissors.py
allegro_zmq/tests/: test_json_command.py  test_simple_json.py
allegro_zmq/utils/: zmq_utils.py
build_tests/: CTestTestfile.cmake  test_simple_json
build_tests/Testing/Temporary/: CTestCostData.txt
cpp/: CMakeLists.txt
cpp/include/: allegroZmqJsonParser.h
cpp/src/: allegroZmqJsonParser.cpp  main.cpp
cpp/tests/: CMakeLists.txt  README.md  mock_bhand.h  simple_test_framework.h  test_allegro_json_parser.cpp  test_integration.cpp  test_simple_json_functions.cpp
